# ScriptWriter

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.backend  LICENSE  README.md  docker-compose.yml  main.py  pyproject.toml
backend/: BACKEND.md  README.md  ScriptAgents.py  __init__.py  agents.py  clean_transcripts.csv  main.py  mcp_servers.py  models.py  output_format.py  prompts.py  scripts_fetch.py  tools.py  utils.py
frontend/: __init__.py  app.py
frontend/static/: app.js  style.css
frontend/templates/: index.html
